--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 .navbar a{
     margin-left: 2cm;
     text-decoration: none;
-    color: green;
+    color: #2E8B57;
 }
 .businessname{
     margin-left: 2cm;
@@ -24,6 +24,6 @@
 .businessname a{
     margin-left: 2cm;
     text-decoration: none;
-    color: green;
+    color: #2E8B57;
 
 }
